z-index fix

--- a/app/assets/stylesheets/pages/p-user_rates/list-posters.sass
+++ b/app/assets/stylesheets/pages/p-user_rates/list-posters.sass
@@ -58,6 +58,7 @@
       position: absolute
       right: 0
       top: 0
+      z-index: 2
 
       &:before
         position: absolute
